--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -68,10 +68,28 @@ h1,
 h2,
 h3,
 h4 {
-    font-weight: normal;
+    //font-weight: normal;
 }
 
 a {
     text-decoration: none;
     cursor: pointer;
+}
+
+h1 {
+    &.pg-slogan {
+        font-size: 2.5rem;
+        font-weight: 700;
+        line-height: 1.2;
+        text-align: center;
+        padding: 2rem;
+    }
+
+    .pg-slogan-sub {
+        display: block;
+        font-size: 1.5rem;
+        font-weight: 400;
+        margin-top: 0.5rem;
+        color: #555;
+    }
 }
