--- a/src/assets/styles/Banner.scss
+++ b/src/assets/styles/Banner.scss
@@ -2,7 +2,7 @@
 
 .banner {
     //background-color: #f7f3f0;
-    color: #333;
+    //color: #333;
     font-size: 3rem;
     text-align: center;
     padding: 1.5rem 1rem;
