--- a/src/assets/styles/Modal.css
+++ b/src/assets/styles/Modal.css
@@ -24,10 +24,11 @@
   text-align: left;
   font-size: 1.5rem;
   line-height: 1.5;
-  color: white;
+  background-color: white;
   transform: translateY(20px);
   opacity: 0;
   transition: all 0.4s ease;
+  border-radius: 1rem;
 }
 .modal-content.visible {
   transform: translateY(0);
@@ -46,6 +47,5 @@
   background: transparent;
   border: none;
   font-size: 1.5rem;
-  color: white;
   cursor: pointer;
 }/*# sourceMappingURL=Modal.css.map */
