--- a/src/assets/styles/Modal.scss
+++ b/src/assets/styles/Modal.scss
@@ -25,10 +25,11 @@
     text-align: left;
     font-size: 1.5rem;
     line-height: 1.5;
-    color: white;
+    background-color: white;
     transform: translateY(20px);
     opacity: 0;
     transition: all 0.4s ease;
+    border-radius: 1rem;
 
     &.visible {
         transform: translateY(0);
@@ -49,6 +50,5 @@
     background: transparent;
     border: none;
     font-size: 1.5rem;
-    color: white;
     cursor: pointer;
 }
