--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -1,14 +1,10 @@
-.photography-packeges {
+.photography-packages {
     background: url('../images/home/paralax3.jpg') no-repeat top right;
     background-size: cover;
     background-attachment: fixed;
-
-    // background-color: #f7f7f7;
-    // box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
     display: flex;
     flex-direction: column;
     justify-content: center;
-
 
     .package-container {
         display: flex;
@@ -18,19 +14,19 @@
         padding: 2rem;
     }
 
-    .package-card {
+    article.package-card {
         display: flex;
         flex-direction: column;
         background-color: rgb(80, 114, 126);
         color: white;
         padding: 1.5rem;
         width: 100%;
-        height: 100%;
         max-width: 400px;
         box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
         text-align: center;
+        border-radius: 8px;
 
-        h4 {
+        h3 {
             font-size: 2rem;
             position: relative;
 
@@ -40,8 +36,7 @@
                 width: 40%;
                 height: 1px;
                 background-color: #ccc;
-                margin-top: 0.5rem;
-                margin: 2rem auto;
+                margin: 2rem auto 1rem;
             }
         }
 
@@ -72,6 +67,15 @@
                 background-color: rgb(105, 142, 156);
             }
         }
+    }
 
+    @media (max-width: 768px) {
+        .package-container {
+            padding: 1rem;
+        }
+
+        article.package-card {
+            max-width: 100%;
+        }
     }
 }
