--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -484,6 +484,10 @@
                 }
             }
 
+            @media (max-width: 1000px) {
+                width: 100%;
+            }
+
             @media (max-width: 500px) {
                 padding: 1rem 0.25rem;
             }
