--- a/src/assets/styles/Navigations.scss
+++ b/src/assets/styles/Navigations.scss
@@ -66,9 +66,9 @@ nav {
 
     .mobile-nav-body {
         padding: 2rem;
-        top: -380px;
-        left: 0;
+        top: 99px;
         width: 100%;
+        right: -100%;
         background-color: rgb(75, 75, 75);
         position: absolute;
         display: flex;
@@ -91,7 +91,7 @@ nav {
 
 .open-mobile-nav {
     .mobile-nav-body {
-        top: 99px;
+        right: 0;
     }
 }
 
