--- a/src/assets/styles/Pages.css
+++ b/src/assets/styles/Pages.css
@@ -509,6 +509,13 @@
   }
 }
 
+.testimonials-page {
+  background: url("../images/about/bg_opac_10.jpg");
+  background-size: cover;
+  background-position: top left;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+}
 .testimonials-page .content {
   max-width: 1440px;
   margin: 0 auto;
@@ -534,6 +541,7 @@
   cursor: pointer;
   position: relative;
   border-radius: 1rem;
+  background-color: rgba(255, 255, 255, 0.7);
 }
 .testimonials-page .content .grid .card h3 {
   font-size: 1.2rem;
@@ -560,7 +568,7 @@
 }
 
 .portfolio-page {
-  background: url("../images/portfolio/bg.jpg");
+  background: url("../images/about/bg_opac_10.jpg");
   background-size: cover;
   background-position: top left;
   background-repeat: no-repeat;
