Set body overflow hidden

--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -58,17 +58,11 @@ textarea {
 
 body {
     font-family: 'Hubballi', cursive;
+    overflow: hidden;
 }
 
 ul {
     list-style: none;
-}
-
-h1,
-h2,
-h3,
-h4 {
-    //font-weight: normal;
 }
 
 a {
