--- a/src/assets/styles/App.scss
+++ b/src/assets/styles/App.scss
@@ -9,6 +9,10 @@
     box-sizing: border-box;
 }
 
+.App {
+    overflow: hidden;
+}
+
 /* Custom Scrollbar for Webkit Browsers (Chrome, Safari, Edge) */
 ::-webkit-scrollbar {
     width: 12px;
@@ -58,7 +62,6 @@ textarea {
 
 body {
     font-family: 'Hubballi', cursive;
-    overflow: hidden;
 }
 
 ul {
