--- a/src/assets/styles/Sliders.css
+++ b/src/assets/styles/Sliders.css
@@ -60,8 +60,8 @@
 }
 .main-slider img {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
+  -o-object-fit: contain;
+     object-fit: contain;
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
 }
 
