--- a/src/assets/styles/Sliders.scss
+++ b/src/assets/styles/Sliders.scss
@@ -69,7 +69,7 @@
 
     img {
         width: 100%;
-        object-fit: cover;
+        object-fit: contain;
         box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
     }
 }
