Hide H2 from the photobox on Home page if width is less than 1000px

--- a/src/assets/styles/Pages.css
+++ b/src/assets/styles/Pages.css
@@ -131,6 +131,11 @@
   color: #BFA16B;
   font-weight: normal;
 }
+@media (max-width: 1000px) {
+  .home-page .category-container header.category-photo-box h2 {
+    display: none;
+  }
+}
 .home-page .category-container header.category-photo-box > div {
   display: flex;
   justify-content: flex-end;
