--- a/src/assets/styles/PhotographyPackeges.css
+++ b/src/assets/styles/PhotographyPackeges.css
@@ -16,7 +16,7 @@
 .photography-packages article.package-card {
   display: flex;
   flex-direction: column;
-  background-color: rgb(80, 114, 126);
+  background-color: rgba(80, 114, 126, 0.95);
   color: white;
   padding: 1.5rem;
   width: 100%;
