--- a/src/assets/styles/PhotographyPackeges.scss
+++ b/src/assets/styles/PhotographyPackeges.scss
@@ -17,7 +17,7 @@
     article.package-card {
         display: flex;
         flex-direction: column;
-        background-color: rgb(80, 114, 126);
+        background-color: rgba(80, 114, 126, 0.95);
         color: white;
         padding: 1.5rem;
         width: 100%;
