--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -147,6 +147,10 @@
                 text-align: center;
                 color: #BFA16B;
                 font-weight: normal;
+
+                @media(max-width: 1000px) {
+                    display: none;
+                }
             }
 
             >div {
