--- a/src/assets/styles/Pages.scss
+++ b/src/assets/styles/Pages.scss
@@ -921,6 +921,7 @@
             form {
                 display: flex;
                 flex-direction: column;
+                overflow: hidden;
 
                 label {
                     font-weight: 600;
